# AS03_TypesAndIO

./: Algebra_Solution.hs  Main.hs  Main_Solution.hs  README.md  TypesAndIO.cabal  hcp-bin.hs  hcp.hs
